filter form styles created

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,11 @@
 $color-christmas-red: #c41e3a;
+$color-christmas-red-darker: #a31a33;
 $color-christmas-green: #165b33;
 $color-gold: #ffd700;
 $color-snow-white: #ffffff;
 $color-light-gray: #f5f5f5;
 $color-dark-gray: #333333;
+$color-dark-gray-darker: #1a1a1a;
 $color-border: #ddd;
 $color-shadow: rgba(0, 0, 0, 0.1);
 
