statistics and recently viewed styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 
 // Components styles import
 @import 'components/filter-form.scss';
+@import 'components/statistics.scss';
 
 // Utilities styles import
 @import 'utilities';
