--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -28,10 +28,6 @@ nav {
   border-radius: $border-radius;
   display: flex;
   flex-direction: column;
-
-  h2 {
-    color: $color-christmas-green;
-  }
 }
 
 main {
@@ -46,6 +42,10 @@ aside {
   background-color: $color-snow-white;
   padding: $spacing-large;
   border-radius: $border-radius;
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-small;
+  height: fit-content;
 }
 
 footer {
