--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 // Components styles import
 @import 'components/filter-form.scss';
 @import 'components/statistics.scss';
+@import 'components/pagination.scss';
 
 // Utilities styles import
 @import 'utilities';
