employee card styles

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -46,6 +46,12 @@ main {
       font-weight: bold;
     }
   }
+
+  [role='list'] {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-medium;
+  }
 }
 
 aside {
