--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'components/filter-form.scss';
 @import 'components/statistics.scss';
 @import 'components/pagination.scss';
+@import 'components/employee-card.scss';
 
 // Utilities styles import
 @import 'utilities';
