--- a/src/styles/components/filter-form.scss
+++ b/src/styles/components/filter-form.scss
@@ -1,12 +1,9 @@
 form {
-  display: flex;
   gap: $spacing-medium;
-  align-items: flex-end;
 
   .filter-group {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
   }
 
   label {
@@ -15,9 +12,6 @@ form {
   }
 
   .form-buttons {
-    display: flex;
-    gap: $spacing-medium;
-
     button {
       font-size: 16px;
 
@@ -45,5 +39,41 @@ form {
 
   option:focus {
     background-color: $color-light-gray;
+  }
+
+  @include desktop {
+    display: flex;
+    align-items: flex-end;
+
+    .filter-group {
+      flex-grow: 1;
+    }
+
+    .form-buttons {
+      display: flex;
+      gap: $spacing-medium;
+    }
+  }
+
+  @include tablet {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: $spacing-medium;
+
+    .form-buttons {
+      display: contents;
+      button {
+        &:first-child {
+          grid-column: 1;
+          grid-row: 2;
+        }
+
+        &:last-child {
+          grid-column: 2;
+          grid-row: 2;
+        }
+      }
+    }
   }
 }
