--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,3 +15,8 @@ $spacing-large: 1.5rem;
 
 $border-radius: 5px;
 $transition-speed: 0.3s;
+
+$breakpoint-mobile: 767px;
+$breakpoint-tablet-min: 768px;
+$breakpoint-tablet-max: 1024px;
+$breakpoint-desktop: 1025px;
