--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $color-christmas-red: #c41e3a;
 $color-christmas-red-darker: #a31a33;
 $color-christmas-green: #165b33;
+$color-christmas-green-darker: #13472a;
 $color-gold: #ffd700;
 $color-snow-white: #ffffff;
 $color-light-gray: #f5f5f5;
