--- a/src/styles/components/filter-form.scss
+++ b/src/styles/components/filter-form.scss
@@ -1,4 +1,4 @@
-form {
+.filter-form-container {
   gap: $spacing-medium;
 
   .filter-group {
@@ -37,6 +37,26 @@ form {
     }
   }
 
+  .select-wrapper {
+    position: relative;
+
+    &::after {
+      content: '\F112';
+      font-family: 'bootstrap-icons';
+      position: absolute;
+      right: $spacing-small;
+      top: 50%;
+      transform: translateY(-50%);
+      pointer-events: none;
+      font-size: 16px;
+    }
+
+    select {
+      appearance: none;
+      width: 100%;
+    }
+  }
+
   option:focus {
     background-color: $color-light-gray;
   }
@@ -72,6 +92,28 @@ form {
         &:last-child {
           grid-column: 2;
           grid-row: 2;
+        }
+      }
+    }
+  }
+
+  @include mobile {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+    gap: $spacing-medium;
+
+    .form-buttons {
+      display: contents;
+      button {
+        &:first-child {
+          grid-column: 1;
+          grid-row: 3;
+        }
+
+        &:last-child {
+          grid-column: 1;
+          grid-row: 4;
         }
       }
     }
